@@ -115,8 +115,11 @@ REF_STATUS FC_FUNC_(ref_fortran_adapt,REF_FORTRAN_ADAPT)( void )
 {
   REF_INT passes, i;
 
-  RSS( ref_metric_sanitize(ref_grid),"sant");
-  ref_mpi_stopwatch_stop("metric sant");
+  if ( REF_FALSE ) 
+    {
+      RSS( ref_metric_sanitize(ref_grid),"sant");
+      ref_mpi_stopwatch_stop("metric sant");
+    }
 
   RSS( ref_gather_tec_movie_record_button( REF_FALSE ), "rec" );
 
