@@ -1,4 +1,5 @@
 
+- turned off ref_metric_sanitize metric SMR in fortran interface
 - increased robustness of matrix inverse with pivot in metric SMR
 
 Wed, Mar 13, 2013 : Released Refine 1.8.9
